# NotesAPP

./: .gitignore  README.md  components.json  index.html  manifest.md  package-lock.json  package.json
extension/: content.js  manifest.json  popup.html  popup.js
src/: App.tsx  api.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  local_server.rs  main.rs  storage.rs
src/components/: BoardCanvas.tsx  EditorContextMenu.tsx  EditorToolbar.tsx  NoteContextMenu.tsx  SidebarContextMenu.tsx  ToolbarButton.tsx
src/components/board/: FloatingBoardToolbar.tsx
src/components/ui/: button.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  scroll-area.tsx  separator.tsx  tooltip.tsx
src/lib/: board-utils.ts  editor-selection.ts  markdown-actions.ts  open-external.ts
src/lib/board/: math.ts
